--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "Welcome to challenge #3! You know the drill by now i.e., the MCQ section and the code challenge section.\n",
         "\n",
-        "Good luck! :)"
+        "Good luck! :)\n"
       ]
     },
     {
@@ -19,7 +19,7 @@
         "id": "ROAjx16L5x5Y"
       },
       "source": [
-        "## Section 1: Multiple Choice Questions"
+        "## Section 1: Multiple Choice Questions\n"
       ]
     },
     {
@@ -30,15 +30,16 @@
       "source": [
         "### Q1. Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\n",
         "\n",
-        "**Options**:  \n",
-        "1. Precision is the fraction of actual positives that were predicted positive.  \n",
-        "2. Precision is the fraction of predicted positives that are actual positives.  \n",
-        "3. Precision is the fraction of negative predictions that are correct."
+        "**Options**:\n",
+        "\n",
+        "1. Precision is the fraction of actual positives that were predicted positive.\n",
+        "2. Precision is the fraction of predicted positives that are actual positives.\n",
+        "3. Precision is the fraction of negative predictions that are correct.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,7 +47,16 @@
         "id": "HFtBxSL40CG9",
         "outputId": "49e0c805-cd5f-4d4b-be20-2cf551c8bc86"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\n",
+            "Answer: Precision is the fraction of predicted positives that are actual positives\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q1():\n",
         "    \"\"\"\n",
@@ -60,7 +70,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\\nAnswer: {answer_q1()}')"
       ]
@@ -72,15 +82,17 @@
       },
       "source": [
         "### Q2. Which statement correctly describes the confusion matrix in a multi-class setting? (1 point)\n",
+        "\n",
         "**Options:**\n",
+        "\n",
         "1. It’s only valid for binary classification, not used for multi-class.\n",
         "2. It’s an NxN array for N classes, comparing predicted vs. actual class labels.\n",
-        "3. It only shows the total correct vs. total incorrect predictions, no class breakdown."
+        "3. It only shows the total correct vs. total incorrect predictions, no class breakdown.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +100,16 @@
         "id": "uFto7n3ny7UA",
         "outputId": "2025056d-b701-4a72-89b4-7a459c2828b6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\n",
+            "Answer: It’s an NxN array for N classes, comparing predicted vs. actual class labels\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q2():\n",
         "    \"\"\"\n",
@@ -102,7 +123,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\\nAnswer: {answer_q2()}')"
       ]
@@ -114,15 +135,17 @@
       },
       "source": [
         "### Q3. Which classifier typically uses bagging plus random subsets of features to reduce variance? (1 point)\n",
+        "\n",
         "**Options:**\n",
+        "\n",
         "1. Decision Tree\n",
         "2. Random Forest\n",
-        "3. Naive Bayes"
+        "3. Naive Bayes\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,7 +153,16 @@
         "id": "c5SAsK9C2Z8R",
         "outputId": "edd20aeb-bf1e-4fcf-fd84-17c8e39a92a6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\n",
+            "Answer: Random Forest\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q3():\n",
         "    \"\"\"\n",
@@ -144,7 +176,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\\nAnswer: {answer_q3()}')"
       ]
@@ -154,17 +186,28 @@
       "metadata": {},
       "source": [
         "### Q4. If we see a high recall but low precision for a certain class, what does that usually imply? (1 point)\n",
+        "\n",
         "**Options:**\n",
+        "\n",
         "1. The model rarely finds actual positives for that class.\n",
         "2. The model finds most actual positives (few false negatives), but also mislabels many negatives as that class (many false positives).\n",
-        "3. The model completely fails to detect that class at all."
+        "3. The model completely fails to detect that class at all.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\n",
+            "Answer: The model finds most actual positives (few false negatives), but also mislabels many negatives as that class (many false positives)\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q4():\n",
         "    \"\"\"\n",
@@ -178,7 +221,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\\nAnswer: {answer_q4()}')"
       ]
@@ -196,25 +239,27 @@
         "For this code challenge, you will work with the [UCI Car Evaluation dataset](https://www.kaggle.com/datasets/elikplim/car-evaluation-data-set). A summary of the dataset is as follows.\n",
         "\n",
         "### Features:\n",
-        "- **buying**: Buying price of the car (vhigh, high, med, low)\n",
-        "- **maint**: Price of the maintenance (vhigh, high, med, low)\n",
-        "- **doors**: Number of doors (2, 3, 4, 5more)\n",
-        "- **persons**: Capacity in terms of persons to carry (2, 4, more)\n",
-        "- **lug_boot**: Size of the luggage boot (small, med, big)\n",
-        "- **safety**: Estimated safety of the car (low, med, high)\n",
+        "\n",
+        "-   **buying**: Buying price of the car (vhigh, high, med, low)\n",
+        "-   **maint**: Price of the maintenance (vhigh, high, med, low)\n",
+        "-   **doors**: Number of doors (2, 3, 4, 5more)\n",
+        "-   **persons**: Capacity in terms of persons to carry (2, 4, more)\n",
+        "-   **lug_boot**: Size of the luggage boot (small, med, big)\n",
+        "-   **safety**: Estimated safety of the car (low, med, high)\n",
         "\n",
         "### Class Labels:\n",
-        "- **unacc**: Unacceptable\n",
-        "- **acc**: Acceptable\n",
-        "- **good**: Good\n",
-        "- **vgood**: Very Good\n",
         "\n",
-        "To pass this section of the weekly challenge, uncomment/fill in code where necessary (marked with a 'TODO:' comment)."
+        "-   **unacc**: Unacceptable\n",
+        "-   **acc**: Acceptable\n",
+        "-   **good**: Good\n",
+        "-   **vgood**: Very Good\n",
+        "\n",
+        "To pass this section of the weekly challenge, uncomment/fill in code where necessary (marked with a 'TODO:' comment).\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -223,7 +268,7 @@
         "import pandas as pd\n",
         "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
         "from sklearn.model_selection import train_test_split\n",
-        "# from sklearn.ensemble import RandomForestClassifier -> Choose your classifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import precision_score, recall_score\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ]
@@ -235,11 +280,12 @@
         "### 1. Load & Encode Car Dataset (1 point)\n",
         "\n",
         "**Goals** for `load_and_encode_car_data()`\n",
+        "\n",
         "1. Reads car.csv.\n",
         "2. Encodes 6 features (buying, maint, doors, persons, lug_boot, safety).\n",
-        "    e.g. one-hot or custom mapping.\n",
+        "   e.g. one-hot or custom mapping.\n",
         "3. Maps class -> integer: unacc=0, acc=1, good=2, vgood=3.\n",
-        "4. Returns (X, y) as arrays."
+        "4. Returns (X, y) as arrays.\n"
       ]
     },
     {
@@ -248,22 +294,41 @@
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shapes: (1728, 6) (1728,)\n"
+          ]
+        }
+      ],
       "source": [
-        "def load_and_encode_car_data():\n",
+        "def load_and_encode_car_data() -> tuple[np.ndarray, np.ndarray]:\n",
         "    \"\"\"\n",
         "    1) read 'car.csv'\n",
         "    2) encode the 6 features to numeric or one-hot\n",
         "    3) map class to {0,1,2,3}\n",
         "    4) return X, y\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass\n",
+        "\n",
+        "    df: pd.DataFrame = pd.read_csv('car.csv')\n",
+        "\n",
+        "    le: LabelEncoder = LabelEncoder()\n",
+        "\n",
+        "    for feature in df.columns:\n",
+        "        df[feature] = le.fit_transform(df[feature])\n",
+        "\n",
+        "    df[\"class\"] = le.fit_transform(df[\"class\"])\n",
+        "    \n",
+        "    X: np.ndarray = df.drop(\"class\", axis=1).values\n",
+        "    y: np.ndarray = df[\"class\"].values\n",
+        "\n",
+        "    return X, y\n",
         "\n",
         "# demonstration\n",
-        "# X, y = load_and_encode_car_data()\n",
-        "# print(\"Shapes:\", X.shape, y.shape)\n",
-        "pass"
+        "X, y = load_and_encode_car_data()\n",
+        "print(\"Shapes:\", X.shape, y.shape)"
       ]
     },
     {
@@ -275,9 +340,10 @@
         "### 2. Train Baseline Model (1 point)\n",
         "\n",
         "**Goals** for `train_baseline_model(X, y)`:\n",
+        "\n",
         "1. Split data (test_size=0.2, random_state=42).\n",
         "2. Use a simple classifier (logistic or naive_bayes, etc.).\n",
-        "3. Return (model, X_test, y_test, y_pred)."
+        "3. Return (model, X_test, y_test, y_pred).\n"
       ]
     },
     {
@@ -288,14 +354,27 @@
       },
       "outputs": [],
       "source": [
-        "def train_classifier(X, y):\n",
+        "def train_classifier(X, y) -> tuple[RandomForestClassifier, np.ndarray, np.ndarray, np.ndarray]:\n",
         "    \"\"\"\n",
         "    1. split X,y\n",
         "    2. pick a classifier\n",
         "    3. fit & predict \n",
         "    4. return (model, X_test, y_test, y_pred)\n",
         "    \"\"\"\n",
-        "    # TODO\n",
+        "    \n",
+        "    test_size: float = 0.2\n",
+        "    random_state: int = 42\n",
+        "    \n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
+        "\n",
+        "    model: RandomForestClassifier = RandomForestClassifier(random_state=random_state)\n",
+        "    model.fit(X_train, y_train)\n",
+        "    \n",
+        "    y_pred: np.ndarray = model.predict(X_test)\n",
+        "    \n",
+        "    return (model, X_test, y_test, y_pred)\n",
+        "\n",
+        "    \n",
         "    pass"
       ]
     },
@@ -306,7 +385,8 @@
         "### 3. Generate Confusion Matrix (1 point)\n",
         "\n",
         "**Goals**:\n",
-        "1.  `generate_confmatrix(y_true, y_pred)` → returns an NxN confusion matrix array from scikit-learn"
+        "\n",
+        "1.  `generate_confmatrix(y_true, y_pred)` → returns an NxN confusion matrix array from scikit-learn\n"
       ]
     },
     {
@@ -332,6 +412,7 @@
         "### 4. Compute F1 score (1 point)\n",
         "\n",
         "**Goals** for `manual_f1_for_class(y_true, y_pred, class_idx)`:\n",
+        "\n",
         "1. Use scikit-learn to get precision, recall for that single class, e.g. by calling `precision_score(..., labels=[class_idx], average='macro')` or `average='binary'` approach.\n",
         "2. Then manually compute F1 using the formula (no direct scikit calls for F1).\n",
         "3. Return the F1 score.\n"
@@ -363,7 +444,7 @@
         "\n",
         "**Goals**\n",
         "\n",
-        "1. Generate a classification report for your trained model and return the report (string value)."
+        "1. Generate a classification report for your trained model and return the report (string value).\n"
       ]
     },
     {
@@ -399,7 +480,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "ise",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -413,7 +494,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.13.1"
     }
   },
   "nbformat": 4,
