--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [
         {
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -304,7 +304,7 @@
         }
       ],
       "source": [
-        "def load_and_encode_car_data() -> tuple[np.ndarray, np.ndarray]:\n",
+        "def load_and_encode_car_data():\n",
         "    \"\"\"\n",
         "    1) read 'car.csv'\n",
         "    2) encode the 6 features to numeric or one-hot\n",
@@ -312,17 +312,17 @@
         "    4) return X, y\n",
         "    \"\"\"\n",
         "\n",
-        "    df: pd.DataFrame = pd.read_csv('car.csv')\n",
+        "    df = pd.read_csv(\"car.csv\")\n",
         "\n",
-        "    le: LabelEncoder = LabelEncoder()\n",
+        "    le = LabelEncoder()\n",
         "\n",
         "    for feature in df.columns:\n",
         "        df[feature] = le.fit_transform(df[feature])\n",
         "\n",
         "    df[\"class\"] = le.fit_transform(df[\"class\"])\n",
         "    \n",
-        "    X: np.ndarray = df.drop(\"class\", axis=1).values\n",
-        "    y: np.ndarray = df[\"class\"].values\n",
+        "    X = df.drop(\"class\", axis=1).values\n",
+        "    y = df[\"class\"].values\n",
         "\n",
         "    return X, y\n",
         "\n",
@@ -348,13 +348,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 70,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
       "outputs": [],
       "source": [
-        "def train_classifier(X, y) -> tuple[RandomForestClassifier, np.ndarray, np.ndarray, np.ndarray]:\n",
+        "def train_classifier(X, y):\n",
         "    \"\"\"\n",
         "    1. split X,y\n",
         "    2. pick a classifier\n",
@@ -362,20 +362,18 @@
         "    4. return (model, X_test, y_test, y_pred)\n",
         "    \"\"\"\n",
         "    \n",
-        "    test_size: float = 0.2\n",
-        "    random_state: int = 42\n",
+        "    test_size = 0.2\n",
+        "    random_state = 42\n",
         "    \n",
         "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
         "\n",
-        "    model: RandomForestClassifier = RandomForestClassifier(random_state=random_state)\n",
+        "    model = RandomForestClassifier(random_state=random_state)\n",
         "    model.fit(X_train, y_train)\n",
         "    \n",
-        "    y_pred: np.ndarray = model.predict(X_test)\n",
+        "    y_pred = model.predict(X_test)\n",
         "    \n",
-        "    return (model, X_test, y_test, y_pred)\n",
-        "\n",
-        "    \n",
-        "    pass"
+        "    return model, X_test, y_test, y_pred\n",
+        "    "
       ]
     },
     {
@@ -391,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -399,8 +397,8 @@
         "    \"\"\"\n",
         "    Return confusion_matrix array (sklearn).\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass"
+        "    \n",
+        "    return confusion_matrix(y_true, y_pred)"
       ]
     },
     {
@@ -420,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -430,8 +428,15 @@
         "    2) compute f1 score manually\n",
         "    return that float\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass"
+        "    \n",
+        "    def f1_score(precision, recall):\n",
+        "        return (2 * (precision * recall)) / (precision + recall)\n",
+        "\n",
+        "    precision = precision_score(y_true, y_pred, labels=[class_idx], average=\"macro\")\n",
+        "    recall = recall_score(y_true, y_pred, labels=[class_idx], average=\"macro\")\n",
+        "    f1 = f1_score(precision, recall)\n",
+        "    \n",
+        "    return f1\n"
       ]
     },
     {
@@ -449,29 +454,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Generate confmatrix:\n",
+            "[[ 75   6   2   0]\n",
+            " [  0  11   0   0]\n",
+            " [  0   0 235   0]\n",
+            " [  1   0   0  16]]\n",
+            "F1 for class 0 manually: 0.9433962264150944\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.99      0.90      0.94        83\n",
+            "           1       0.65      1.00      0.79        11\n",
+            "           2       0.99      1.00      1.00       235\n",
+            "           3       1.00      0.94      0.97        17\n",
+            "\n",
+            "    accuracy                           0.97       346\n",
+            "   macro avg       0.91      0.96      0.92       346\n",
+            "weighted avg       0.98      0.97      0.98       346\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "def generate_classification_report(y_true, y_pred):\n",
         "    \"\"\"\n",
         "    calls sklearn's classification_report\n",
         "    returns it\n",
         "    \"\"\"\n",
-        "    # TODO\n",
-        "    pass\n",
         "\n",
+        "    return classification_report(y_true, y_pred)\n",
         "\n",
-        "# optional demonstration\n",
-        "# X, y = load_and_encode_car_data()\n",
-        "# model, X_te, y_te, y_pr = train_classifier(X,y)\n",
-        "# print(\"Generate confmatrix:\")\n",
-        "# cm = generate_confmatrix(y_te, y_pr)\n",
-        "# print(cm)\n",
-        "# f1class0 = manual_f1_for_class(y_te, y_pr, class_idx=0)\n",
-        "# print(\"F1 for class 0 manually:\", f1class0)\n",
-        "# rep = generate_classification_report(y_te, y_pr)\n",
-        "# print(rep)\n"
+        "X, y = load_and_encode_car_data()\n",
+        "model, X_te, y_te, y_pr = train_classifier(X,y)\n",
+        "print(\"Generate confmatrix:\")\n",
+        "cm = generate_confmatrix(y_te, y_pr)\n",
+        "print(cm)\n",
+        "f1class0 = manual_f1_for_class(y_te, y_pr, class_idx=0)\n",
+        "print(\"F1 for class 0 manually:\", f1class0)\n",
+        "rep = generate_classification_report(y_te, y_pr)\n",
+        "print(rep)\n"
       ]
     }
   ],
